fixed header alignment

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -2,7 +2,6 @@
   margin-left: auto;
   border-radius: 8px;
   font-size: 1rem;
-  padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
 .logo {
